# vgpu

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build_vs2019_x64.bat  build_web.bat  cmake_vs2019.bat  cmake_vs2022_ARM64.bat  cmake_vs2022_uwp.bat  cmake_vs2022_uwp_arm64.bat
.github/workflows/: build.yml
assets/: shell.html
assets/shaders/: compile.py  triangle.hlsl  triangleFragment.cso  triangleFragment.spv  triangleVertex.cso  triangleVertex.spv
include/: vgfx.h  vgpu.h
include/vgpu/: vgpu.h
samples/: 00_clear.c  00_clear.cpp  01_triangle.c  CMakeLists.txt
samples/HelloWorld/: main.cpp
script/: cmake_vs2017.bat
src/: CMakeLists.txt  VGPU.c  VGPU_Driver.h  VGPU_Driver_Vulkan.c  vgfx.c  vgfx_driver.h  vgfx_driver_d3d.h  vgfx_driver_d3d11.cpp  vgfx_driver_d3d12.cpp  vgfx_driver_vulkan.cpp  vgfx_driver_webgpu.cpp  vgpu.c  vgpu.cpp  vgpu_backend.h  vgpu_check.c  vgpu_d3d.h  vgpu_d3d11.c  vgpu_d3d11.cpp  vgpu_d3d12.cpp  vgpu_d3d_common.h  vgpu_driver.h  vgpu_driver_d3d.h  vgpu_driver_d3d11.c  vgpu_driver_d3d11.cpp  vgpu_driver_d3d12.cpp  vgpu_driver_gl.cpp  vgpu_driver_opengl.c  vgpu_driver_opengl.cpp  vgpu_driver_vulkan.cpp  vgpu_driver_webgpu.cpp  vgpu_driver_wgpu.cpp  vgpu_internal.h  vgpu_vk.c  vgpu_vk.cpp
src/d3d12/: D3D12MemAlloc.cpp  D3D12MemAlloc.h  d3d12.h  d3d12compatibility.h  d3d12sdklayers.h  d3d12shader.h
src/lib/: D3D12MemAlloc.cpp  D3D12MemAlloc.h
src/lib/D3D12MemoryAllocator/: D3D12MemAlloc.cpp  D3D12MemAlloc.h
src/lib/directx/: d3d12.h  d3d12compatibility.h  d3d12sdklayers.h  d3d12video.h  d3dcommon.h
src/lib/vma/include/: vk_mem_alloc.h
src/vgpu/: CMakeLists.txt  vgpu.cpp  vgpu.h  vgpu_driver.h  vgpu_driver_d3d11.cpp  vgpu_driver_d3d12.cpp  vgpu_driver_vulkan.cpp
src/vk/: vk.c  vk.h  vk_mem_alloc.cpp  vk_mem_alloc.h
tools/: vgpu_shader.cpp  vgpu_shader.h
